Adjust sections to ensure they are equidistant from each other on mobile

--- a/screen.css
+++ b/screen.css
@@ -250,7 +250,6 @@ h4 + h5 {
         display: block;
     }
 
-
     #content > section {
         padding: 30px;
         margin-top: 0px;
@@ -259,6 +258,10 @@ h4 + h5 {
     #work > section {
         margin-top: 0px;
         padding-top: 0px;
+    }
+
+    #notes {
+        margin-bottom: 0px;
     }
 
     #projects {
